<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="34"
        android:text="@string/stockNameHeader"
        android:textColor="#9C27B0"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="33"
        android:text="@string/dateHeader"
        android:textColor="#9C27B0"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/deleteStockButton"
        android:layout_width="14dp"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete_record"
        app:srcCompat="@drawable/delete_icon" />

</LinearLayout>
